--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,7 @@
 <html lang="en"><!--default language of the document content -->
 	
     <head>
-        <title>Tutorial - CI435 Introduction to Web Development</title><!--web page title -->
+        <title>Introduction to Web Development</title><!--web page title -->
 		<meta charset="utf-8"><!--character encoding for the document (Unicode) -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="css/normalize.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 	<div id="wrapper">
 	<!--The 'wrapper' contains all the page content-->
     <header class = "banner"><!--The main heading for the page -->
-		<h1>CI435 Tutorial</h1>
+	
 		<h2>Study tips during lockdown</h2>
 	</header>
 	
